# vulkanforge

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  README.md  RELEASE_NOTES_v0.4.6.md  RELEASE_NOTES_v0.5.0.md  VP_VULKANINFO_AMD_Radeon_RX_9070_XT_(RADV_GFX1201)_26_0_5.json  build.rs  inference_test_prompts_15.json  inference_test_prompts_16.json  inference_test_prompts_mistral_5.json
.cargo/: config.toml
.claude/: CLAUDE.md
docs/: BENCHMARKS.md  INSTALLATION.md  MODELS.md  context_store_ergaenzung.md  context_store_konzept.md  executor_refactor_proposal.md  gemma4_26b_moe_solution.md  p1_batch_prefill_plan.md  phase2_expert_grouped_dispatch.md  prefill_arc_2026_06.md  qwen35_architecture_analysis.md  qwen35_sprint_g_plan.md  vulkanforge_phase4_plan.md  vulkanforge_phase5_projektplan.md  vulkanforge_projektplan.md  vulkanforge_rdna4_coopmat_referenzen.md  vulkanforge_rdna4_referenzen.md  vulkanforge_test_profiling_strategie.md  vulkanforge_vision.md  wmma_gfx12_a_layout.txt  wmma_gfx12_b_layout.txt  wmma_gfx12_d_layout.txt  wmma_register_layout_gfx12.md
docs/v0.4/: api_server_architecture.md  api_server_architecture_claudeai_prompt.md
examples/: bench_coopmat.rs  bench_int8cm_gemm.rs  bench_int8cm_q4k.rs  bench_qk.rs  cb_backpressure_test.rs  coopmat_check.rs  diagnose_drift.rs  dump_specials.rs  dump_tokenizer_meta.rs  dump_tokenizer_test.rs  fa_gemma_stats.rs  fp8_gemv_standalone.rs  fp8_prefill_shape_bench.rs  fp8_smoke.rs  gemv_f16_shape_bench.rs  probe_batch_attn.rs  probe_coopmat.rs  probe_coopmat_layout.rs  probe_model.rs  probe_think_tokens.rs  profile_decode_safetensors.rs  profile_forward.rs  profile_positions.rs  profile_prefill.rs  quant_cold_probe.rs  quant_smoke.rs  rgp_capture.rs  run_15prompt_bench.rs  run_alice_test.rs  run_pp_bench.rs  run_validation.rs  safetensors_inspect.rs  sample_decode.rs  spm_dump.rs  spv_isa.rs  test_moe_router.rs  tok_diff.rs  vram_pressure_test.rs
results/: fp8_glslang_analysis.md  grand_audit_v02.md  phase1_step_1.0_shader_analysis.md  phase1_step_1.1_shader_extraction.md  phase1_step_1.2_pipeline_setup.md  phase1_step_1.3_buffer_testdata.md  phase1_step_1.4_dispatch_smoke_test.md  phase1_step_1.5_scaling_test.md  phase2_profiling_positions.md  phase2_step_2.1-2.3_shader_infra.md  phase2_step_2.4-2.5_gguf_elementwise.md  phase2_step_2.6-2.7_forward_pass.md  phase2_step_2.8-2.10_decode_validation.md  phase3_prefill_drift_debug.md  phase3_rgp_analysis.md  phase3_rgp_profiling.md  phase3_step_3a_attention_fix.md  phase3_step_3b_features.md  phase3_step_3c_performance_benchmark.md  phase3_step_3d_prefill_gemm.md  phase3_step_3e_prefill_wiring.md  phase4_step_4a_vgpr_reduction.md  phase4_step_4b_flash_attention.md  phase4_step_4c_multi_wg_attention.md  phase4_step_4d_multi_model_release.md  phase5a_step_1_dgc_poc.md  phase5a_step_2_cb_reuse.md  phase5a_step_3_ship.md  phase5b_step_1_batch_attn.md  phase5b_step_2_integration.md  phase5b_step_3_batch_ops.md  phase5b_step_4_benchmark.md  phase5c_spm_tokenizer.md  phase6_mul_mm_port.md  phase6_v012_optimizations.md  phase6_v012_tile_tuning.md  phase6a_coopmat_benchmark.md  phase6b_coopmat_gemm.md  phase7_aligned_gemm.md  phase7_mul_mm_aligned.md  (+110 more)
src/: auto_detect.rs  hf_config.rs  lib.rs  main.rs  quantize.rs  quantize_avx512.rs  safetensors.rs
src/backend/vulkan/: bfloat16_ext.rs  buffers.rs  chat.rs  chat_template.rs  commands.rs  decode.rs  device.rs  forward.rs  fp8_ext.rs  gguf.rs  kv_cache.rs  loader.rs  mod.rs  pipeline.rs  pipeline_registry.rs  profiler.rs  q3k.rs  q4_0.rs  q4k.rs  q5k.rs  q6k.rs  shaders.rs  spirv_reflect.rs  spm.rs  tokenizer.rs  vram_arena.rs
src/cpu/: avx512_gemv.rs  lm_head.rs  mod.rs  q6k.rs
src/server/: auto_ctx.rs  cancel.rs  error.rs  memory.rs  mod.rs  routes.rs  sampling.rs  serve.rs  state.rs  stream.rs  tools.rs
src/server/handlers/: chat.rs  completions.rs  health.rs  mod.rs  (+2 more)
tests/: README.md  coopmat_fa_gemma.rs  coopmat_global_spike.rs  coopmat_q4k.rs  coopmat_tiled.rs  correctness.rs  dequant_q4k.rs  flash_attn_tiled_ref.rs  fp8_gemm_correctness.rs  fp8_gemv_correctness.rs  kv_reuse_ident.rs  memory.rs  q3k_dequant_sanity.rs  q3k_gemv_correctness.rs  q4_0_dequant_sanity.rs  q4_0_gemv_correctness.rs  q4_0_qat_correctness.rs  q5k_dequant_sanity.rs  q5k_gemv_correctness.rs  q6k_embed_zeros_sanity.rs  regression.rs
tests/sprint34_load_tr/: README.md  gfx1201_direct_isa_comp.txt  gfx1201_rowmajor_isa_comp.txt  gfx1201_wave32_isa_comp.txt  test_coopmat_direct_load.comp  test_coopmat_direct_load.spv  test_coopmat_fp8_direct.comp  test_coopmat_fp8_direct.spv  test_coopmat_layout_check.comp  test_coopmat_layout_check.spv  test_coopmat_rowmajor.comp  test_coopmat_rowmajor.spv  test_coopmat_wave32.comp  test_coopmat_wave32.spv
vf-clide/: Cargo.toml  README.md
vf-clide/src/: agent.rs  client.rs  lib.rs  main.rs  memory.rs  repl.rs  status.rs  tools.rs  types.rs
vf-clide/tests/: live_smoke.rs
vk_shaders/: _probe_coopmat.comp  bench_coopmat_fp8.comp  bench_coopmat_pure.comp  bench_int8cm_gemm.comp  bench_int8cm_q4k.comp  bench_qk_coopmat.comp  bench_qk_scalar.comp  bench_scalar_gemm.comp  dequant_q4k_debug.comp  flash_attn.comp  flash_attn_batch.comp  flash_attn_cm_gemma.comp  flash_attn_cm_gemma_rs.comp  flash_attn_coopmat.comp  flash_attn_reduce.comp  flash_attn_split.comp  flash_attn_tiled.comp  fma_add.comp  fma_add_indexed.comp  fma_reduce.comp  fma_reduce_batch.comp  gated_delta_net.comp  gelu_pytorch_tanh.comp  gelu_pytorch_tanh_glu_batched.comp  kv_copy_fp16.comp  kv_fp8_to_f16.comp  kv_store_fp8.comp  l2_norm.comp  moe_router_fused.comp  moe_router_norm_gemv.comp  moe_router_softmax_topk.comp  mul_coopmat_bf16.comp  mul_coopmat_fp8.comp  mul_coopmat_fp8_bn32.comp  mul_coopmat_fp8_bn32_blockwise.comp  mul_coopmat_fp8_bn64.comp  mul_coopmat_fp8_multi_wg.comp  mul_coopmat_fp8_naive.comp  mul_coopmat_fp8_native_bn32.comp  mul_coopmat_fp8_native_bn32_blockwise.comp  (+20 more)
(+30 files in other folders)
