[package]
name = "vulkanforge"
version = "0.3.12"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"

[dependencies]
ash = "0.38"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
fancy-regex = "0.13"
gpu-allocator = "0.27"
half = "2"
memmap2 = "0.9"
rayon = "1"
rustyline = "15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
shaderc = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
