[package]
name = "vulkanforge"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"

[dependencies]
ash = "0.38"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
fancy-regex = "0.13"
gpu-allocator = "0.27"
half = "2"
memmap2 = "0.9"
rayon = "1"
rustyline = "15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# v0.4.0 API server stack (Sprint 1 lands the deps; types/error/sampling
# need axum for IntoResponse; tokio/tower-http/uuid are pre-positioned
# for Sprint 2-3 router + state + chatcmpl-id generation).
axum = { version = "0.8", default-features = false, features = ["json", "http1", "tokio"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
# Sprint 3 — SSE streaming. `futures-util` gives us Stream/StreamExt,
# `tokio-stream` wraps mpsc::Receiver as a Stream for the SSE adapter.
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio-stream = "0.1"

[build-dependencies]
shaderc = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
